# rakukan-ni

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  NOTICE  README.md  build-command.txt  check_esaxx_build.ps1  phase3-result.json  rakukan_install.txt  rakukan_installer.iss  rakukan_segment_llm.patch  replace.ps1  replace2.ps1  task.txt
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
apps/rakukan-settings-winui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Rakukan.Settings.WinUI.csproj  SettingsStore.cs  app.manifest
config/: config.toml  keymap.toml
crates/rakukan-dict/: Cargo.toml
crates/rakukan-dict-builder/: Cargo.toml
crates/rakukan-dict-builder/src/: main.rs
crates/rakukan-dict/src/: lib.rs  mozc_dict.rs  store.rs  user_dict.rs
crates/rakukan-engine/: Cargo.toml  build.rs  models.toml
crates/rakukan-engine-abi/: Cargo.toml
crates/rakukan-engine-abi/src/: lib.rs
crates/rakukan-engine-cli/: Cargo.toml
crates/rakukan-engine-cli/src/: main.rs
crates/rakukan-engine-host/: Cargo.toml
crates/rakukan-engine-host/src/: main.rs
crates/rakukan-engine-rpc/: Cargo.toml
crates/rakukan-engine-rpc/src/: client.rs  codec.rs  lib.rs  pipe.rs  protocol.rs  server.rs
crates/rakukan-engine/src/: backend.rs  conv_cache.rs  digits.rs  ffi.rs  kana.rs  lib.rs  segments.rs
crates/rakukan-engine/src/dict/: loader.rs
crates/rakukan-engine/src/kanji/: backend.rs  hf_download.rs  llamacpp.rs  mod.rs  model_config.rs  token.rs
crates/rakukan-engine/src/romaji/: rules.rs
crates/rakukan-tray/: Cargo.toml
crates/rakukan-tray/src/: main.rs
crates/rakukan-tsf/: Cargo.toml  build.rs  rakukan.rc
crates/rakukan-tsf/src/: diagnostics.rs  extension.rs  globals.rs  lib.rs  macros.rs
crates/rakukan-tsf/src/engine/: client_action.rs  composition.rs  config.rs  conv_cache.rs  input_mode.rs  keymap.rs  mod.rs  state.rs  text_util.rs  user_action.rs
crates/rakukan-tsf/src/tsf/: candidate_window.rs  display_attr.rs  edit_session.rs  factory.rs  language_bar.rs  live_session.rs  mod.rs  mode_indicator.rs  registration.rs  settings_launcher.rs  tray_ipc.rs
crates/rakukan-tsf/src/tsf/factory/: dispatch.rs  edit_ops.rs  on_compose.rs  on_convert.rs  on_input.rs
docs/: CONVERSION_PIPELINE_CLEANUP_PLAN.md  CONVERTER_REDESIGN.md  DESIGN.md  ESAXX_PATCH_SETUP.md  EXPLORER_CRASH_HISTORY.md  GPU_MEMORY_LIFECYCLE.md  INVESTIGATION_GUIDE.md  LIVE_CONV_REDESIGN_REVISED.md  PHASE9_DESIGN.md  ROADMAP.md  SEGMENT_EDIT_REDESIGN.md  THIRD_PARTY_LICENSES.md  VIBRATO_PHASE1.md  handoff.md
docs/archive/: PHASE1_SUMMARY.md  PHASE2_PREP.md  PHASE2_STATUS.md  WARNING_FIXES.md
patches/esaxx-rs/: Cargo.toml  build.rs
scripts/: build-engine.ps1  build-installer.ps1  build-settings-winui.ps1  build-tsf.ps1  check-amakana-registry.ps1  check-env.ps1  check-install-instruction.ps1  clean-registry.ps1  demote-debug-logs.ps1  detect-gpu.ps1  install.ps1  refresh-models.ps1  register-tip.ps1  setup-env.ps1  setup-esaxx-patch.ps1  sign-artifacts.ps1  uninstall-amakana-legacy.ps1  uninstall.ps1  unregister-tip.ps1  verify-karukan.ps1  verify-phase1.ps1  verify-phase2.ps1  verify-phase3.ps1
