[package]
name    = "rakukan-dict"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

description = "辞書パーサー・ユーザー辞書管理（mozc binary + user）"

[dependencies]
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
toml         = "0.8"
bincode      = { workspace = true }   # 学習履歴 learn_history.bin
memmap2      = { workspace = true }   # rakukan.dict の mmap 読み取り

[dev-dependencies]
tempfile  = { workspace = true }
