[package]
name = "rakukan-engine-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "rakukan engine host process (loads rakukan_engine_*.dll and serves RPC)"

[[bin]]
name = "rakukan-engine-host"
path = "src/main.rs"

[dependencies]
rakukan-engine-abi = { path = "../rakukan-engine-abi" }
rakukan-engine-rpc = { path = "../rakukan-engine-rpc" }
anyhow   = { workspace = true }
tracing  = { workspace = true }
tracing-subscriber = { workspace = true }
time = "0.3"

# サイレント死の診断: Win32 stderr を log ファイルへリダイレクトするのに使う。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
