[package]
name = "rakukan-engine-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "rakukan エンジンのプロセス間 RPC（Named Pipe + postcard）"

[dependencies]
rakukan-engine-abi = { path = "../rakukan-engine-abi" }
anyhow   = { workspace = true }
tracing  = { workspace = true }
serde    = { workspace = true }
postcard = { version = "1", features = ["use-std"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
]
