[package]
name = "rakukan-tray"
version.workspace = true
edition.workspace = true
description = "rakukan tray indicator (input mode: あ/ア/A)"

[dependencies]
anyhow = { workspace = true }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }
