[package]
name = "esaxx-rs"
version = "0.1.10"
edition = "2021"
description = "esaxx-rs patched: static_crt(false) for /MD compatibility with llama-cpp-sys-2"

[lib]
name = "esaxx_rs"
path = "src/lib.rs"

[features]
default = ["cpp"]
cpp = ["cc"]

[dependencies]

[build-dependencies]
cc = { version = "1", optional = true }
